--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # IntelliJ project files
-.idea
+.idea/
+.gradle/
+gradle/
 *.iml
 out
 gen### Java template
 *.class
-
 
 # Package Files #
 *.jar
